kenstyle.css
body {
	margin: 0;
	background-color: #141F33;
	height: 100%;
	margin-top:75px;
}


#blog_name {
	color: white;
	padding-top: 30px;
	text-align: center;
	padding-bottom: 30px;
	margin-bottom: 0;
	font-family: Lora;
	letter-spacing: 4px;
	font-size: 60px;
	background-color: #141F33;
}

#navigation li {
	list-style: none;
	display: inline-block;
	margin: 0px 2% 0px 2%;
	line-height: 25px;
}

#navigation li a {
	font-family: Open Sans Condensed;
	text-decoration: none;
	color: black;
	font-size: 1.5em;
}

#navigation li a:hover {
	color: #5200CC;
}

#navigation {
	display: inline-block;
	margin-left: 1%;
	margin-right: 1%;
	width: 98%;
	text-align: center;
	white-space:nowrap;
}

.rectangle {
	width: 100%;
	height: 50px;
	background: #F5F5F5;
	margin: 0 auto;
	margin-top:-75px;
	display: table;
	position:fixed;
	z-index:10;
}
.rectangle2 {
	width: 100%;
	height: 50px;
	background: #F5F5F5;
	margin: 0 auto;
	display: table;
}

#feature {
	color: black;
	font-family: Open Sans Condensed;
	font-weight: 450;
	margin-left: 3%;
	display: inline-block;
	text-decoration: none;
	letter-spacing: 2px;
	font-size: 30px;
}
#blurb {
	color: black;
	font-family: Roboto;
	font-size: 17px;
	margin-left: 6%;
	margin-right: 8%;
	margin-bottom: 0;
	display: inline-block;
	line-height: 150%;
	margin-top: 0;
}

#stats {
	color: gray;
	font-family: Open Sans Condensed;
	display: inline-block;
	margin-left: 6%;
	margin-top: 0;
}
.description {
	background: #96BEE6;
	width: 35%;
	float: right;
	height: 350px;

}
.description_left {
	background: #96BEE6;
	width: 35%;
	float: left;
	height: 350px;
	margin-left: 2%;
}
#feature_image {
	float: left;
	margin-left: 2%;
	width: 35%;
	vertical-align: top;
	background: white;
}
#feature_image_right {
	float: left;
	margin-right: 0%;
	width: 35%;
	background: white;
}

#feature a:hover {
	color: #5200CC;
	margin-top: -2px;
	margin-bottom: +2px;
}

#feature_image:hover {
	opacity: 0.4;
}
#feature_image_right:hover {
	opacity: 0.4;
}

#feature_article {
	width: 90%;
	margin-left: 5%;
	margin-right: 5%;
	font-size: 50px;
	font-size: 4.0vw;
	font-weight: 200;
	display: inline-block;
	text-align: center;
	color: black;
	font-family: Open Sans Condensed;
	text-decoration: none;
	letter-spacing: 2px;
}

#title_about_box {
width: 50%;
float: right;
background: white;
height: auto;
margin-bottom: 0
margin-top: 0
}

#feature_about {
	width: 90%;
	margin-left: 5%;
	margin-right: 5%;
	margin-bottom: 0
	font-size: 80px;
	font-size: 6.0vw;
	font-weight: 200;
	display: inline-block;
	color: black;
	font-family: Open Sans Condensed;
	text-decoration: none;
	letter-spacing: 2px;
	text-align: center;
}

#ccm_logo {
	display: inline-block;
	width: 50%;
	margin-left: 25%;
	margin-top: -7%;
}

.article_shell {
	background-color: white;
	width: 70%;
	margin-left: 2%;
	margin-top: 0;
}

.about_shell {
	background-color: white;
	width: 96%;
	margin-left: 2%;
	margin-right: 2%;
	margin-top: 0;
}

#feature_image_article {
	witdh: 70%;
	margin-bottom: 15px;
}

#feature_image_about {
	margin-bottom: 15px;
	margin-left: 0;
}

#hr_left {
	margin-top: 100px;
	float: left;
	width: 22.5%;
	border: 0;
	height: 0;
	box-shadow: 0 0 10px 1px black;
}
#hr_right {
	margin-top: 100px;
	float: right;
	width: 22.5%;
	border: 0;
	height: 0;
	box-shadow: 0 0 10px 1px black;
}
#hr_ab {
	width: 100%;
	border: 0;
	height: 0;
	box-shadow: 0 0 40px 10px black;
}
#hr_ab_2 {
	width: 100%;
	border: 0;
	height: 0;
	box-shadow: 0 0 20px 2px black;
	margin-bottom: 50px;
	background: white;
}
#story_box h3 {
	display: inline-block;
	font-family: Open Sans Condensed;
	font-size: 5.0vw;
	width: 70%;
	margin-left: 15%;
	margin-bottom: 0;
	margin-top: 40px;
}

#story_box p {
	width: 70%;
	display: inline-block;
	font-family: Arial, Verdana, sans-serif;
	line-height: 150%;
	font-size: 18px;
	margin-left: 15%;
	margin-right: 15%;
	margin-bottom: 100px;
}
#story_box {
	padding-bottom: 10px;
	margin-bottom: 0;
	margin-top: -3%;
}

#about_story_box h3 {
	display: inline-block;
	font-family: Open Sans Condensed;
	font-size: 28px;
	width: 70%;
	margin-left: 15%;
	margin-bottom: 0;
	margin-top: 40px;
}

#about_story_box p {
	width: 70%;
	display: inline-block;
	font-family: Arial, Verdana, sans-serif;
	line-height: 150%;
	font-size: 18px;
	margin-left: 15%;
	margin-right: 15%;
}
#about_story_box {
	padding-bottom: 100px;
	margin-bottom: 0;
}

#ad_wrapper {
	float: right;
	background: #141F33;
	width: 24%;
	margin-top: 0%;
	margin-right: 2%;
	margin-left: 2%;
	height: 2800px;
}
@media only screen and (max-width: 1100px) {
	#feature_article {
		width: 100%;
		margin-left: 0;
		margin-right: 0;
		font-size: 100px;
		font-size: 8.0vw;
		font-weight: 300;
		display: inline-block;
		text-align: center;
		color: black;
		font-family: Open Sans Condensed;
		text-decoration: none;
		letter-spacing: 2px;
	}
	#ad_wrapper {
		display: none;
	}
	#blurb {
		font-size: 14px;
	}

	.description {
		width: 48%;
		margin-right: 2%;
	}
	.description_left {
		width: 48%;
	}
	#feature_image {
		width: 48%;
	}
	#feature_image_right {
		width: 48%;
	}
	#ad_wrapper_article_3 {
		display: none;
	}
	#ad_wrapper_article_2 {
		display: none;
	}
	.article_shell {
		width: 96%;
	}
	#story_box {
		padding-bottom: 10px;
		margin-bottom: -3;
		margin-top: 3%;
	}
}
@media only screen and (max-width: 750px) {
	#blurb {
		font-size: 12px;
}
#feature {
	font-size: 20px;
}
}
@media only screen and (max-width: 500px) {
	#story_box h3 {
		font-size: 8.0vw;
	}
	#story_box {
		padding-bottom: 10px;
		margin-bottom: -3%;
	}
}
@media only screen and (max-width: 450px) {
	#blurb {
		font-size: 11px;
}
}
@media only screen and (min-width: 900px) {
	#story_box h3 {
		font-size: 48px;
	}
	#story_box {
		padding-bottom: 10px;
		margin-bottom: 0;
		margin-top: 0;
	}
}

#ad_wrapper_article {
	float: right;
	background: #141F33;
	width: 24%;
	margin-top: 0%;
	margin-right: 2%;
	margin-left: 2%;
	height: 1900px;
}
#ad_wrapper_article_2 {
	float: right;
	background: #141F33;
	width: 24%;
	margin-top: 0%;
	margin-right: 2%;
	margin-left: 2%;
	height: 2100px;
}

#social_section {
	width:100%;
	background: #FFFFFF;
	margin-bottom: 25px;
	margin-top: 25px;
	padding-bottom: 100px;
}

.advert {
	background: #FFFFFF;
	width: 100%;
	margin-bottom: 25px;
}
#side_header {
	text-align: center;
	font-family: Open Sans Condensed;
	font-size: 25px;
	padding-top: 10px;
	margin-bottom: 10px;
}
.soc_med {
	position: relative;
	width: 15%;
	float: left;
	margin-left:20%;
}

.soc_med_2 {
	position: relative;
	width: 15%;
	float: left;
}

.soc_med_3 {
	position: relative;
	float: left;
	width: 15%;
}
#soc_med_icons {
	vertical-align:middle;
	width: 20%;
	height: auto;
}

#wslogo {
	vertical-align:middle;
}

#subscribe {
	background: #ffffb3;
}

#sub_para {
	font-family: Roboto;
	text-align: center;
	font-size: 18px;
}

#email_input {
	font-family: Roboto;
	font-size: 18px;
	width: 80%;
	border-radius: 10px;
	-moz-border-radius: 10px;
	-khtml-border-radius: 10px;
	-webkit-border-radius: 10px;
}

form {
	text-align: center;
	position: relative;
}

#submit_button {
	background: #ff8533;
	font-size: 18px;
	font-family: Roboto;
	font-weight: bold;
	width: 100px;
	border-radius: 5px;
	-moz-border-radius: 5px;
	-khtml-border-radius: 5px;
	-webkit-border-radius: 5px;
	margin-bottom: 30px;
	padding: 3px 3px 3px 3px;
}

#footer_wrapper {
	background: #F5F5F5;
	width: 100%;
	height: 60px;
	clear: right;
	margin-top: -5%;
	padding-top: 30px;
	text-align: left;
}
#bot_list {
	background: #F5F5F5;
	margin-bottom: 0px;
	padding-bottom: 3%;
}

.button_box {
	text-align: center;
	width: 72%;
	margin-right: 25%;
	margin-left: 1%;
}
.button_box hr {
	color: white;
	width: 0%;
}


#prev {
	font-family: Roboto;
	font-size: 18px;
	margin-left: 15%;
	background: #96BEE6;
	padding: 10px 24px 10px 24px;
	float: left;
}

#next {
	font-family: Roboto;
	font-size: 18px;
	margin-right: 42%;
	background: #96BEE6;
	padding: 10px 24px 10px 24px;
	float: right;
}
#page_navs {
	width: 100%;
	margin-top: 0;
	margin-bottom: 0;
	margin-left: 0;
	padding-top: 10px;
	padding-bottom: 3%;
	background: #F5F5F5;
	display: inline-block
}
#footer_wrapper li {
	display: inline;
}

#copy {
	font-family: Roboto;
	font-size: 18px;
	margin-bottom: 0;
}

#foot_title {
	font-family: Lora;
	letter-spacing: -0.5px;
	font-size: 30px;
	margin-left: 20px;
	margin-bottom: 0;
	background: #F5F5F5;
}

#foot_link {
	font-family: Open Sans Condensed;
	font-size: 20px;
	margin-bottom: 0%;
	margin-left: 3%;
	background: #F5F5F5;
}

#footer_wrapper li a {
	text-decoration: none;
	color: black;
}

#footer_wrapper li a:hover {
	color: #5200CC;
}
#feature_image_article_2 {
	margin-bottom: 15px;
	margin-left: 25%;
	margin-right: 25%;
}
#feature_image_home {
	margin-bottom: 0;
	margin-left: 15%;
	margin-right: 15%;
}
#ad_wrapper_article_3 {
	float: right;
	background: #141F33;
	width: 24%;
	margin-top: 0%;
	margin-right: 2%;
	margin-left: 2%;
	height: 100px;
}
#stats {
	color: white;
	font-family: Pacifico;
	display: inline-block;
	margin-left: 6%;
}
#in_art_image {
	margin-left: 20%;
	width: 60%;
	margin-right: 20%;
}

